Bug #1572 - Group / Member Profiles: Spacing between content areas

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -1656,8 +1656,10 @@ input#group-request-send {
     margin-top: 10px;
 }
 /**group profiles**/
+.group-header-avatar {
+	margin-bottom: 20px;
+}
 #group-action-wrapper{
-    margin-bottom: 20px;
     .link-btn{
         padding: 9px 12px;
     }
@@ -2159,9 +2161,6 @@ body.membership-requests {
         &:hover{
             color: @aqua;
         }
-    }
-    #profile-action-wrapper{
-        margin-bottom: 20px;
     }
     @media (max-width: @screen-xs-max){
         margin-top: 20px;
